--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -64,6 +65,7 @@
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
