Fixed pesky jwt error

--- a/api/.env.example
+++ b/api/.env.example
@@ -2,11 +2,11 @@
 # For MAC 0.0.0.0
 # For WIN localhost
 # For Docker "database"
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_NAME=codecity
 DB_SSL=false
 PORT=8080
 ENABLE_ORM_LOGS=false
