--- a/api/package.json
+++ b/api/package.json
@@ -50,6 +50,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.10",
+    "uuid": "^10.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
